fixing UI layout issue

--- a/style.css
+++ b/style.css
@@ -266,31 +266,32 @@ body.dark-mode header butto:active {
 }
 
 /* changing the position of the theme btn and the logout btn*/
-#theme-btn {
-    position: absolute;
-    top: 20px;
-    z-index: 9999;
-}
-#theme-btn {
-    left: 0;
-}
-#logout-btn {
-    position: absolute;
-    top: 20px;
-    z-index: 9999;
-#logout-btn {
-    right: 0;
-}
-}
 header {
+    width: 100%;           
+    max-width: 1000px;
+    margin: 0 auto;
+    
     position: relative;
-    padding-top: 10px;
+    padding-top: 20px;
     margin-bottom: 40px;
+    text-align: center;
 }
+
 #theme-btn, #logout-btn {
+    position: absolute;
+    top: 25px;
+    z-index: 100;
     transition: all 0.3s ease;
 }
 
+#theme-btn {
+    left: 10px;
+}
+
+/* Right Button */
+#logout-btn {
+    right: 10px;
+}
 /* MOBILE OPTIMIZATION PATCH */
 @media screen and (max-width: 768px) {
     header {
